--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1467.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.2",
+    "disqus-react": "^1.1.5",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "react": "^18.2.0",
